# examples

./: .gitignore  Cargo.toml  README.md
example/: messageExample.json  schemaTest.json  userSignupPublisher.yaml  userSignupSubscriber.yaml
src/: main.rs  parser.rs
src/parser/: extract_types.rs  parse_yaml.rs  schema_parser.rs
src/pub_sub_server/: mod.rs  publisher.rs  subscriber.rs
templateTest/: Cargo.toml
templateTest/src/: main.rs  spec.yaml
templateTest/src/templates/: pub.rs.tera
templates/: pub_sub-template.tmpl  publisher_template.tmpl
test-env/: Cargo.toml
test-generator/: Cargo.toml
test-generator/output/: generated.rs
test-generator/spec/: basic.yaml
test-generator/src/: main.rs
test-generator/templates/: basic.txt
tokio_pub_sub_felix/: Cargo.toml
tokio_pub_sub_felix/src/: handler.rs  main.rs
